# fcitx-skin-viewer

./: AUTHORS  CMakeLists.txt  config.h.in
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyLoadConfig.cpp  MyLoadConfig.h  main.cpp
